<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sobre"
    android:scaleType="centerCrop">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="2.3"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <ScrollView
            android:layout_width="300dp"
            android:layout_height="328dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/sobre_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:id="@+id/textView11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Vinicius Bussola"
                    android:id="@+id/textViewBussola"
                    android:textColor="#000000"
                    android:layout_below="@+id/textView1"
                    android:textSize="21sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/contato_bussola"
                    android:id="@+id/textView4"
                    android:textColor="#000000"
                    android:layout_marginTop="2sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Tales de Padua"
                    android:id="@+id/textViewCreu"
                    android:textColor="#000000"
                    android:textSize="21sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/contato_crew"
                    android:id="@+id/textView5"
                    android:textColor="#000000"
                    android:layout_marginTop="0sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Diego Yamada"
                    android:id="@+id/textViewPirata"
                    android:textColor="#000000"
                    android:textSize="21sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/contato_pirata"
                    android:id="@+id/textView6"
                    android:textColor="#000000"
                    android:layout_marginTop="0sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/atualizacoes"
                    android:id="@+id/textView7"
                    android:textColor="#000000"
                    android:layout_marginTop="20sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/codigo_fonte"
                    android:id="@+id/textView8"
                    android:textColor="#000000"
                    android:layout_marginTop="20sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/codigo_fonte1"
                    android:id="@+id/textView80"
                    android:textColor="#000000"
                    android:layout_marginTop="1sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>