<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/saldo"
    android:scaleType="centerCrop">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="2"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_weight="0.8">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:text="@string/saldo_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textSize="30sp"
                android:id="@+id/textViewSaldoUsu" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText_nUSP"
                android:layout_gravity="center_horizontal"
                android:textIsSelectable="false"
                android:inputType="numberSigned" />

            <TextView
                android:text="@string/saldo_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textSize="30sp"
                android:id="@+id/textViewSaldoSenha" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_senha"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Verificar Saldo"
                android:id="@+id/button_saldo"
                android:layout_marginTop="15sp"
                android:background="@color/tabs_background"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1.7"
        android:baselineAligned="false">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:text="@string/primeiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textSize="16sp"
                android:id="@+id/textPrimeiro" />

            <TextView
                android:text="@string/esqueci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_marginTop="15sp"
                android:textSize="16sp"
                android:id="@+id/textEsqueci"
                android:linksClickable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"></LinearLayout>
    </LinearLayout>

</LinearLayout>